<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/content_my_store"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:background="@color/colorPrimary"

                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:tint="@color/colorPrimaryDark"
                    android:id="@+id/header_bg"
                    android:scaleType="centerCrop"
                    android:src="@drawable/navigation_icon_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>


                <ImageView
                    android:layout_marginTop="-50dp"
                    android:layout_width="132dp"
                    android:layout_height="132dp"
                    android:layout_gravity="center"
                    android:src="@drawable/navigation_menu_background" />

            </FrameLayout>

            <LinearLayout
                android:padding="20dp"
                android:backgroundTint="@color/white"
                android:background="@drawable/rounded_layout_item"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="-10dp"
                android:orientation="vertical">


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/login_username"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColorHint="@color/grey_field"
                    android:textSize="16sp"
                    app:met_baseColor="@color/black"
                    app:met_errorColor="@color/red"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_textColorHint="@color/grey_field" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColorHint="@color/grey_field"
                    android:textSize="16sp"
                    app:met_baseColor="@color/black"
                    app:met_errorColor="@color/red"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_textColorHint="@color/grey_field" />

                <Button
                    android:id="@+id/connect"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/userbuttonstyle"
                    android:text="@string/Sign_in"
                    android:textColor="@color/defaultWhiteColor" />

                <TextView
                    android:id="@+id/forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/forgotpassword"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/or"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/signup"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/userbuttonstyle"
                    android:text="@string/create_an_account"
                    android:textColor="@color/defaultWhiteColor" />

            </LinearLayout>

        </FrameLayout>


    </LinearLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/loading_icon_manage" />

    <include
        android:id="@+id/error"
        layout="@layout/fragment_error_manage" />

    <include
        android:id="@+id/empty"
        layout="@layout/fragment_empty_list_manage" />


</LinearLayout>